public/styles/site/_page-waiting-child-profiles.scss
/* TODO: BEM all the things, then Sass all the things.  Also, ITCSS all the filename things  */
/* TODO: Sass up the styles even more with nested selectors */

.gallery,
.gallery-search-form {
    display: none; // TODO: this should be handled programmatically as the gallery is used in the account page as well wehre this doesn't apply
}

.filters {
	display: flex;
	flex-direction: column;
}

.waiting-child-profiles-filter {
    width: 90%;

    @media all and ( min-width: 31.25em ) {	/* 500px / 16px = 31.25em */
    	width: 140px;
    }
}

.waiting-child-profiles__search-and-filter-bar {
    display: flex;
	flex-direction: column;
	align-items: flex-start;

	@media all and ( min-width: 55.7142857em ) { // 780px
		flex-direction: row;
		align-content: space-between;
	}
}

.waiting-child-profiles__gallery-filter {
    width: 12em;
}

#registration-number-search {
	width: 90%;
	max-width: 275px;
	margin-top: 1.5em;
    font-family: inherit;
	font-size: 0.8rem;
	
	@media all and ( min-width: 55.7142857em ) { // 780px
		margin-top: 0;
	}
}

.icon-key {
	display: flex;
    justify-content: space-around;
	margin-top: 1.5em;
	height: 2.64285714em; // 37px
    align-items: center;

	@media all and ( min-width: 55.7142857em ) { // 780px
		align-items: center;
		margin-top: 0;
	}
}
/* TODO: make this its own component */
.icon-text-unit {
	display: inline-block;
	margin-left: 10px;
}

.icon-text-unit__icon {
	margin-right: 5px;
	vertical-align: middle;
	width: 20px;
}

.icon-text-unit__text {
	vertical-align: middle;
}

.profiles-container {
	min-height: 20em;
	padding-bottom: 2em;
}

/* TODO: We've BEM'ed below, now BEM above! */
.profile__profile-navigation {
	margin-bottom: 1em;
	color: $modal-color-1;
}

.profile-navigation__previous-text,
.profile-navigation__next-text,
.profile-navigation__divider {
	position: relative;
	top: -8px;
}

.profile-navigation__previous,
.profile-navigation__next {
	cursor: pointer;
}

.profile-navigation__divider {
	margin: 0 0.1em;
	font-size: 1.2em;
}

.profile-tabs {
	border-bottom: 1px solid $modal-color-1;
	margin-bottom: 1em;
}

.profile-tabs__tab {
	padding: 1em;
	display: inline-block;

	&:not(.profile-tabs__tab--selected) {
		cursor: pointer;
	}
}

.profile-tabs__tab--selected {
	background-color: $modal-color-1;
	color: $text-color-light;
}

.profile-tab__contents {
	display: none;
}

.profile-tab__contents--selected {
	display: block;
}

.profile__profile-picture {
	width: 200px;
    float: right;
    margin-left: 1em;
    margin-bottom: 1em;
}

.profile__basic-info {
	margin-right: 15em;
}

.profile-details__name {
	font-size: 1.4em;
	font-style: italic;
	margin-bottom: 0.4em;
	font-weight: 400;
}

.profile-details__age {
	margin-bottom: .8em;
}

.profile-details__registration-number {
	margin-bottom: 2em;
}

.detailed-child-info__header {
	font-weight: 600;
}

.detailed-child-info__introduction,
.detailed-child-info__part-1,
.detailed-child-info__part-2,
.detailed-child-info__part-3 {
	margin-bottom: 1.5em;
}

.detailed-child-info__introduction,
.detailed-child-info__part-1 {
	margin-right: 15em;
}

.profile-details__video-container,
.profile-details__wednesdays-child-video-container {
	position: relative;
	width: 100%;
	height: 0;
	padding-bottom: 56.25%;
	margin-bottom: 1.5em;
}

.profile-details__video,
.profile-details__wednesdays-child-video {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.bookmark {
	display: inline-block;
	margin-top: 10px;
	font-family: sans-serif;

	&--active {
		color: $text-color-7;
	}
}

